manifests/submanifests/userservicemanifest.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-deployment
  namespace: epam-mentoring-kuber-namespace
spec:
  selector:
    matchLabels:
      app: userservice
  replicas: 3
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name:  userservice
          image: epamantontsyrkunou/userservice-1.0.0
          ports:
            - containerPort: 7777
          env:   # Setting Enviornmental Variables
            - name: PASSWORD
              valueFrom :
                secretKeyRef :
                   name : user-db-secret
                   key :  POSTGRES_PASSWORD

            - name: USERNAME  # Setting Database name from Secret
              valueFrom :
                secretKeyRef :
                   name : user-db-secret
                   key : POSTGRES_USER

            - name: URL  # Setting Database username from configMap
              valueFrom :
                 configMapKeyRef :
                   name : user-db-config-map
                   key : URL
