manifests/submanifests/ingressmanifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /uss
        pathType: Prefix
        backend:
          service:
            name: userservice-svc
            port:
              number: 7777
